# zkdcap

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
crates/collaterals/: Cargo.toml
crates/collaterals/src/: certs.rs  enclave_identity.rs  enclave_report.rs  lib.rs  quote.rs  sgx_extensions.rs  tcb_info.rs  tcbinfo.rs  utils.rs
crates/pcs/: Cargo.toml
crates/pcs/src/: client.rs
crates/quote-verifier/: Cargo.toml
crates/quote-verifier/data/: qeidentityv2_sgx.json  qeidentityv2_tdx.json  tcbinfov3_00806f050000.json
crates/quote-verifier/src/: cert.rs  collateral.rs  collaterals.rs  constants.rs  crl.rs  crypto.rs  enclave_identity.rs  lib.rs  pck.rs  quotes.rs  sgx_extensions.rs  tcb_info.rs  tcbinfo.rs  tdx_module.rs  tests.rs  verifier.rs
crates/quote-verifier/src/quotes/: mod.rs  version_3.rs  version_4.rs
crates/quote-verifier/src/quotes/livyquotes/: livy.json
crates/quote-verifier/src/types/: cert.rs  collaterals.rs  crl.rs  enclave_identity.rs  mod.rs
crates/quote-verifier/src/types/quotes/: mod.rs  version_3.rs  version_4.rs
crates/quote-verifier/src/utils/: cert.rs  crypto.rs  enclave_identity.rs  hash.rs  mod.rs  pck.rs  tcbinfo.rs  tdx_module.rs  tests.rs
crates/quote-verifier/src/utils/quotes/: mod.rs  version_3.rs  version_4.rs
crates/types/: Cargo.toml
crates/types/src/: cert.rs  enclave_identity.rs  lib.rs  tcb_info.rs  tcbinfo.rs  utils.rs
crates/types/src/quotes/: body.rs  mod.rs  version_3.rs  version_4.rs
data/v3/: pck_platform_crl.der  pck_processor_crl.der  signing_cert.pem  tcbinfov3_00906ED50000.json
livyimpl/: Cargo.toml
livyimpl/src/: main.rs
zkvm/risc0/: Cargo.toml  build.rs
zkvm/risc0/artifacts/: dcap-quote-verifier
zkvm/risc0/guest/: Cargo.toml
zkvm/risc0/src/: lib.rs  methods.rs
