[package]
name = "dcap-collaterals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
hex = "0.4"
serde_json = { version = "1.0", features = ["alloc", "preserve_order"] }
x509-parser = "0.15.1"
der = { version = "0.7", features = ["alloc", "derive"] }
chrono = { version = "0.4" }

openssl = { git = "https://github.com/datachainlab/rust-openssl", rev = "2d12d80f48163c729e31a12fddc24f411a2b79a0", features = ["vendored"] }
