[package]
name    = "dcap-collaterals"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = { workspace = true }
hex         = { workspace = true }
x509-parser = { workspace = true }
der         = { workspace = true }
chrono      = { workspace = true }
serde_json  = { workspace = true, features = ["preserve_order"] }
openssl     = { workspace = true }
dcap-types  = { workspace = true }

[features]
default          = []
openssl-vendored = ["openssl/vendored"]
