[package]
name    = "dcap-pcs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow              = { workspace = true }
log                 = { workspace = true }
hex                 = { workspace = true }
urlencoding         = { workspace = true }
pem                 = { workspace = true }
reqwest             = { workspace = true }
dcap-types          = { workspace = true }
dcap-quote-verifier = { workspace = true }

[features]
default = []
