[package]
name    = "dcap-quote-verifier"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
hex             = { version = "0.4" }
x509-parser     = { version = "0.15.1" }
serde           = { version = "1.0", features = ["derive"] }
serde_json      = { version = "1.0" }
anyhow          = { version = "1" }
p256            = { version = "0.13.2" }
sha2            = { version = "0.10.8" }
sha3            = { version = "0.10.8" }
alloy-sol-types = { version = "0.8.12" }
dcap-types      = { path = "../types" }


[features]
default = []

[dev-dependencies]
serde_json       = { version = "1.0", features = ["preserve_order"] }
dcap-collaterals = { path = "../collaterals" }
dcap-pcs = { path = "../pcs" }
chrono = "0.4.41"
