[package]
name    = "dcap-quote-verifier"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
hex             = { workspace = true }
x509-parser     = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
p256            = { workspace = true }
sha2            = { workspace = true }
sha3            = { workspace = true }
alloy-sol-types = { workspace = true }
dcap-types      = { workspace = true }

[features]
default = []

[dev-dependencies]
serde_json       = { workspace = true, features = ["preserve_order"] }
dcap-collaterals = { workspace = true }
