[package]
name    = "dcap-types"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
x509-parser = { workspace = true }
serde       = { workspace = true }
chrono      = { workspace = true }
anyhow      = { workspace = true }
hex         = { workspace = true }

[features]
default = []

[dev-dependencies]
proptest = { workspace = true }
