[package]
name    = "zkdcap-risc0"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[dependencies]
risc0-zkvm = { version = "=1.3.0", default-features = false, optional = true }

[build-dependencies]
risc0-build  = { version = "=2.0.0", features = ["docker", "unstable"] }
risc0-binfmt = { version = "=1.3.0", default-features = false }

[dev-dependencies]
risc0-zkvm          = { version = "=1.3.0", default-features = false, features = ["prove"] }
hex                 = { version = "0.4", default-features = false, features = ["alloc"] }
dcap-quote-verifier = { path = "../../crates/quote-verifier" }

[features]
cuda = ["risc0-zkvm?/cuda"]
