[package]
name    = "zkdcap-risc0"
version = "0.1.0"
edition = "2021"

[package.metadata.risc0]
methods = ["guest"]

[build-dependencies]
risc0-build  = { version = "=3.0.3", features = ["docker", "unstable"] }
risc0-binfmt = { version = "3.0.2", default-features = false }

[dev-dependencies]
risc0-zkvm          = { version = "=3.0.3", default-features = false, features = ["prove"] }
hex                 = { version = "0.4", default-features = false, features = ["alloc"] }
dcap-quote-verifier = { path = "../../crates/quote-verifier" }

[features]
cuda = ["risc0-zkvm/cuda"]
